--- a/servidor_minecraft/server.properties
+++ b/servidor_minecraft/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Wed Mar 19 20:06:58 UTC 2025
+#Fri Mar 21 01:42:38 UTC 2025
 enable-jmx-monitoring=false
 rcon.port=25575
 level-seed=
@@ -48,7 +48,7 @@ broadcast-console-to-ops=true
 spawn-npcs=true
 spawn-animals=true
 function-permission-level=2
-initial-enabled-packs=vanilla,fabric
+initial-enabled-packs=vanilla
 level-type=minecraft\:normal
 text-filtering-config=
 spawn-monsters=true
